--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,7 @@ body {
 
 .container {
   width: 90%;
-  max-width: 800px;
+  max-width: 1920px;
   margin: 0 auto;
 }
 
@@ -40,13 +40,13 @@ header {
   width: 100%;
   border-bottom: 1px dashed #9acc79;
   padding: 20px 0;
-  margin: 0 0 40px 0;
+  /*margin: 0 0 40px 0;*/
 }
 
 header h1 {
   font-size: 30px;
   line-height: 1.5;
-  margin: 0 0 0 -40px;
+  margin-left: 35%;
   font-weight: bold;
   font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
   color: #9acc79;
@@ -66,6 +66,8 @@ header h2 {
   font-size: 18px;
   font-weight: 300;
   color: #666;
+  margin-left: 15%;
+  margin-right: 15%;
 }
 
 #downloads .btn {
@@ -80,6 +82,8 @@ header h2 {
 #main_content {
   width: 100%;
   -webkit-font-smoothing: antialiased;
+  margin-left: 20%;
+  margin-right: 20%;
 }
 section img {
   max-width: 100%
@@ -88,7 +92,7 @@ section img {
 h1, h2, h3, h4, h5, h6 {
   font-weight: normal;
   font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
-  color: #47F197;
+  color: #9acc79;
   letter-spacing: -0.03em;
   text-shadow: 0 1px 1px rgba(0, 0, 0, 0.1),
                0 0 5px rgba(181, 232, 83, 0.1),
@@ -97,31 +101,43 @@ h1, h2, h3, h4, h5, h6 {
 
 #main_content h1 {
   font-size: 30px;
+  margin-left: 25%;
+  margin-right: 25%;
 }
 
 #main_content h2 {
   font-size: 24px;
+  margin-left: 25%;
+  margin-right: 25%;
 }
 
 #main_content h3 {
   font-size: 18px;
+  margin-left: 25%;
+  margin-right: 25%;
 }
 
 #main_content h4 {
   font-size: 14px;
+  margin-left: 25%;
+  margin-right: 25%;
 }
 
 #main_content h5 {
   font-size: 12px;
   text-transform: uppercase;
-  margin: 0 0 5px 0;
+  /*margin: 0 0 5px 0;*/
+  margin-left: 25%;
+  margin-right: 25%;
 }
 
 #main_content h6 {
   font-size: 12px;
   text-transform: uppercase;
   color: #999;
-  margin: 0 0 5px 0;
+  /*margin: 0 0 5px 0;*/
+  margin-left: 25%;
+  margin-right: 25%;
 }
 
 dt {
@@ -172,6 +188,8 @@ th {
   text-align: left;
   border-bottom: 1px dashed #b5e853;
   padding: 5px 10px;
+  margin-left: 25%;
+  margin-right: 25%;
 }
 
 td {
