--- a/css/main.css
+++ b/css/main.css
@@ -11,14 +11,14 @@ body {
 /* General & 'Reset' Stuff */
 
 .container {
-  width: 90%;
+  width: 100%;
   max-width: 1920px;
   margin: 0 auto;
 }
 
 section {
   display: block;
-  margin: 0 0 20px 0;
+  /*margin: 0 0 20px 0;*/
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -38,9 +38,9 @@ li {
 header {
   background: rgba(0, 0, 0, 0.1);
   width: 100%;
-  border-bottom: 1px dashed #9acc79;
+  border-bottom: 1px dashed #47F197;
   padding: 20px 0;
-  /*margin: 0 0 40px 0;*/
+  /*margin: 0 0 50px 0;*/
 }
 
 header h1 {
@@ -49,7 +49,7 @@ header h1 {
   margin-left: 35%;
   font-weight: bold;
   font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
-  color: #9acc79;
+  color: #47F197;
   text-shadow: 0 1px 1px rgba(0, 0, 0, 0.1),
                0 0 5px rgba(181, 232, 83, 0.1),
                0 0 10px rgba(181, 232, 83, 0.1);
@@ -66,6 +66,8 @@ header h2 {
   font-size: 18px;
   font-weight: 300;
   color: #666;
+  /*margin-left: 300px;
+  margin-right: 0px;*/
   margin-left: 15%;
   margin-right: 15%;
 }
@@ -92,11 +94,14 @@ section img {
 h1, h2, h3, h4, h5, h6 {
   font-weight: normal;
   font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
+  /*color: #47F197;*/
   color: #9acc79;
   letter-spacing: -0.03em;
   text-shadow: 0 1px 1px rgba(0, 0, 0, 0.1),
                0 0 5px rgba(181, 232, 83, 0.1),
                0 0 10px rgba(181, 232, 83, 0.1);
+  /*margin-left: 20%;
+  margin-right: 20%;*/
 }
 
 #main_content h1 {
@@ -107,28 +112,28 @@ h1, h2, h3, h4, h5, h6 {
 
 #main_content h2 {
   font-size: 24px;
-  margin-left: 25%;
-  margin-right: 25%;
+    margin-left: 20%;
+  margin-right: 20%;
 }
 
 #main_content h3 {
   font-size: 18px;
-  margin-left: 25%;
-  margin-right: 25%;
+    margin-left: 20%;
+  margin-right: 20%;
 }
 
 #main_content h4 {
   font-size: 14px;
-  margin-left: 25%;
-  margin-right: 25%;
+    margin-left: 20%;
+  margin-right: 20%;
 }
 
 #main_content h5 {
   font-size: 12px;
   text-transform: uppercase;
   /*margin: 0 0 5px 0;*/
-  margin-left: 25%;
-  margin-right: 25%;
+  margin-left: 20%;
+  margin-right: 20%;
 }
 
 #main_content h6 {
@@ -136,8 +141,8 @@ h1, h2, h3, h4, h5, h6 {
   text-transform: uppercase;
   color: #999;
   /*margin: 0 0 5px 0;*/
-  margin-left: 25%;
-  margin-right: 25%;
+    margin-left: 20%;
+  margin-right: 20%;
 }
 
 dt {
@@ -153,9 +158,8 @@ ul li:before {
   content: ">>";
   font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
   font-size: 13px;
-  color: #9acc79;
-  margin-left: -37px;
-  margin-right: 21px;
+  color: #47F197;
+  margin-right: 1%;
   line-height: 16px;
 }
 
@@ -185,11 +189,11 @@ table {
 }
 
 th {
-  text-align: left;
+  /*text-align: left;*/
   border-bottom: 1px dashed #b5e853;
   padding: 5px 10px;
-  margin-left: 25%;
-  margin-right: 25%;
+  margin-left: 20%;
+  margin-right: 20%;
 }
 
 td {
