--- a/css/main.css
+++ b/css/main.css
@@ -49,7 +49,7 @@ header h1 {
   margin-left: 35%;
   font-weight: bold;
   font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
-  color: #47F197;
+  color: #9acc79;
   text-shadow: 0 1px 1px rgba(0, 0, 0, 0.1),
                0 0 5px rgba(181, 232, 83, 0.1),
                0 0 10px rgba(181, 232, 83, 0.1);
